samples/_failures_safe/1761621485_3531ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80bd30de.c: In function ‘main’:
./samples/SAFE/__tmp_80bd30de.c:157:5: error: expected expression at end of input
  157 |     add_edge(&graph,
      |     ^~~~~~~~
./samples/SAFE/__tmp_80bd30de.c:157:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_80bd30de.c:103:5: note: declared here
  103 | int add_edge(Graph* graph, int u, int v, int weight) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_80bd30de.c:157:5: error: expected declaration or statement at end of input
  157 |     add_edge(&graph,
      |     ^~~~~~~~
